<resources>
    <string name="app_name">ZWW</string>
    <string name="loading">Loading…</string>
    <string name="symbol">Symbol</string>
    <string name="update">Update</string>
    <string name="ignore">Ignore</string>
    <string name="title_recharge">Recharge</string>
    <string name="BTC">BTC</string>
    <string name="b2c_text_rechargeRecord">Recharge Record</string>
    <string name="available_balance">Available balance</string>
    <string name="orientation">Operation</string>
    <string name="volume">Volume</string>
    <string name="determine">OK</string>
    <string name="certificate_type">Certificate Type</string>
    <string name="sign_out">Logout</string>
    <string name="confirm">OK</string>
    <string name="hint_personal_info_certificate_num">Input identity certificate number</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="finish">Finish</string>
    <string name="toast_asset_pass_format_error">Password format error; the password should have a length limitation of 8 - 16 bits and include at least digits + letters</string>
    <string name="day">1Day</string>
    <string name="select_area">Select country or region code</string>
    <string name="default_area">China (+86)</string>
    <string name="invite_code_hint">Invitation Code (optional)</string>
    <string name="toast_no_idcard">Input ID number</string>
    <string name="toast_no_google_code">Input Google verification code</string>
    <string name="title_verify">Real Name Authentication</string>
    <string name="idcard">ID card</string>
    <string name="warn_storage_permission">No Storage Permission</string>
    <string name="warn_camera_permission">No Camera Permission</string>
    <string name="title_google_verified">Google Verification</string>
    <string name="close_verify">Disable Verification</string>
    <string name="account_state">Account State</string>
    <string name="firstname">First Name</string>
    <string name="other_time">Time</string>
    <string name="default_area_verify">China</string>
    <string name="add">Add</string>
    <string name="toast_withdraw_suc">Withdraw succeeded</string>
    <string name="add_address">Add address</string>
    <string name="toast_scan_content_empty">No valid contents found by scan</string>
    <string name="subtitle_name">Address:</string>
    <string name="save_success">Save succeeded</string>
    <string name="delete">delete</string>
    <string name="otc_recharge">Deposit</string>
    <string name="otc_xinyong">Credit</string>
    <string name="otc_shensu">Complain</string>
    <string name="otc_user_name">Name </string>
    <string name="otc_input_user_name">Input your name</string>
    <string name="otc_bank_name_lit">Subbranch bank of deposit</string>
    <string name="otc_bank_name_lit_input">Please input of the name of subbranch bank of deposit</string>
    <string name="otc_bank_num">Number of bank card</string>
    <string name="otc_edit">Edit</string>
    <string name="otc_delete">Delete</string>
    <string name="otc_choose_contry">Country/region</string>
    <string name="otc_all">All </string>
    <string name="otc_please_cert">Please pass the real-name verification first</string>
    <string name="otc_collect_money">Payment</string>
    <string name="otc_choose_language">Language</string>
    <string name="otc_people">Receipt</string>
    <string name="otc_shensu_reason_4">Cause of complaint</string>
    <string name="otc_shensu_img">Upload a picture</string>
    <string name="input_touchId">Please add a fingerprint</string>
    <string name="fingerprint_recognition">fingerprint recognition</string>
    <string name="tap_to_fingerprint">Please click Fingerprint Recognition to start verification</string>
    <string name="set_gesture_pwd_title">Set gesture password</string>
    <string name="trade_bb_titile">Exchange</string>
    <string name="contract_dialog_content">Index Price: The price of the underlying asset.\n
        Mark Price: This is the current mark price. \n
        This indicator shows your position in the auto-deleverage queue. If all lights are lit, in the event of a liquidation, your position may be reduced.</string>
    <string name="position_amount">Size</string>
    <string name="cost">Cost</string>
    <string name="contract_price_tag">Mark Price</string>
    <string name="contract_margin">Margin</string>
    <string name="contract_flat_price_content">If the mark price of the contract reaches below this price (when long) or above this price (when short), your position will be liquidated.</string>
    <string name="contract_cost_content">The cost (in margin) to execute this order. This includes your selected leverage and your current position, if any. Reducing a position does not cost margin.</string>
    <string name="contract_price_tag_content">The latest mark price for this contract. This is the price used for PNL and margin calculations, and may differ from the last price for the purposes of avoiding price manipulation. This does not affect settlement.</string>
    <string name="contract_margin_content">The amount of margin locked by each position. If you have isolated margin on a position, this number will go down as the margin remaining decreases, and your effective leverage rises. Drag the leverage slider in the sidebar to adjust the margin assigned to your position.</string>
    <string name="contract_market_content">Click to close your entire XBTUSD position at market.</string>
    <string name="contract_price_title">price</string>
    <string name="contract_wallet_balance_title">Account balance</string>
    <string name="contract_wallet_balance_content">Account balance = (Deposits - Withdrawals + Realised PNL)</string>
    <string name="contract_order_margin_content">Order Margin: The minimum equity you must retain with the exchange to keep your open orders. This is the value of all open orders you have divided by the selected leverage.</string>
    <string name="contract_position_margin_content">Position Margin: The minimum equity you must retain with the exchange to keep your positions. This is the entry value of all contracts you hold divided by the selected leverage, plus unrealised profit and loss.</string>
    <string name="contract_unrealised_pnl_title">Unrealised PNL</string>
    <string name="contract_unrealised_pnl_content">Unrealised PNL: Current profit and loss from all open positions.</string>
    <string name="contract_available_balance_content">Your margin available for new positions. Available Balance = (Margin Balance - Order Margin - Position Margin).</string>
    <string name="contract_assets_account_equity">Available assets</string>
    <string name="contracnt_margin_balance_content">When there is a full position loss, the available assets will be used to offset the full position loss, so the available assets and the available margin may not be consistent.</string>
    <string name="index_mark_price">Index Price: The price of the underlying asset. \n
Mark Price: This is the current mark price.</string>
    <string name="risk_show_tips">This indicator shows your position in the auto-deleverage queue. If all lights are lit, in the event of a liquidation, your position may be reduced.</string>
    <string name="contract_clinch_deal_price">Average Price</string>
    <string name="contract_allocated_margin">Currently assigned margin：</string>
    <string name="contract_distributable_security">Available Margin：</string>
    <string name="noun_account_avatar">头像</string>
    <string name="new_input_nickname">Please enter a nickname within 6 Chinese characters</string>
    <string name="new_input_sign">not sign</string>
    <string name="action_settings">Settings</string>
    <string name="new_otc_real_name">Nombre real</string>
    <string name="bibi_to_otc">Coin to OTC</string>
    <string name="otc_to_coin">OTC to Coin</string>
    <string name="scanning_qr_code_registration">Scan to register</string>
    <string name="address_action_addnewaddress">Newly increased address</string>
    <string name="address_text_remark">Notes</string>
    <string name="address_tip_inputorcopy">Input address or paste address by long press.</string>
    <string name="alert_common_iknow">Get it</string>
    <string name="appeal_action_reasonNotReceiveCoin">The person involved does not issue coins for a long time.</string>
    <string name="appeal_action_reasonOther">Other</string>
    <string name="appeal_action_reasonOverPaid">My payment amount is more than the order amount.</string>
    <string name="appeal_explain_warning">1. After the complaint is filed, the assets will be blocked. Customer service staff will deal with it within 1-2 working days.
2. For the person disturbing the normal operation of platform, his/her account will be blocked if the circumstances are serious.</string>
    <string name="appeal_tip_reasonOtherPlaceholder">Other reasons</string>
    <string name="assets_action_chargeCoin">Deposit</string>
    <string name="assets_action_contractNote">Transactions</string>
    <string name="assets_action_journalaccount">Transaction</string>
    <string name="assets_action_privacy">Hide small balances</string>
    <string name="assets_action_search">Search</string>
    <string name="assets_action_transaction">Trade</string>
    <string name="assets_action_transfer">Transfer</string>
    <string name="assets_action_withdraw">Withdraw</string>
    <string name="assets_text_available">Avail.</string>
    <string name="assets_text_equivalence">convert into</string>
    <string name="assets_text_freeze">Frozen</string>
    <string name="charge_action_chargeHistory">Deposit History</string>
    <string name="charge_action_copyAddress">Copy address</string>
    <string name="charge_action_copyTag">Copy label</string>
    <string name="charge_action_saveQR">Save QR code</string>
    <string name="charge_action_searchcoin">Search</string>
    <string name="b2c_text_changecoin">Select</string>
    <string name="common_action_next">Next</string>
    <string name="common_tip_inputPhoneOrMail">Enter phone number/email address</string>
    <string name="login_action_fogotPassword">Forgot Password</string>
    <string name="login_action_login">Log In</string>
    <string name="login_action_register">Register Now</string>
    <string name="register_tip_inputPassword">Enter password</string>
    <string name="withdraw_text_available">Avail.</string>
    <string name="withdraw_text_minimumVolume">Minimum amount</string>
    <string name="contract_share_label">Share</string>
    <string name="leverage_asset">Leverage Asset</string>
    <string name="leverage_borrow">Loan</string>
    <string name="leverage_borrowRecord">Loan Record</string>
    <string name="asset_lever_history">History</string>
    <string name="leverage_have_borrowed">Already Loaned</string>
    <string name="leverage_rate">Interest Rate</string>
    <string name="leverage_text_biggestLimit">Maximum amount</string>
    <string name="password_reset_tips">The withdrawal will be disabled for 48 hours once password is changed.</string>
    <string name="market_edit_like_type_top">Top</string>
    <string name="market_edit_like_type_drag">Drag</string>
    <string name="quant_price_section">Price range</string>
    <string name="quant_grid_amount">The number of grids</string>
    <string name="quant_initial_quote_amount">Initial investment</string>
    <string name="quant_stop_strategy">terminating</string>
    <string name="quant_view_detail">Details</string>
    <string name="quant_grid_profit">Grid profit</string>
    <string name="quant_position_profit">Position Gain And Loss</string>
    <string name="quant_run_time">Running time</string>
    <string name="quant_entrust_date">Commission time</string>
    <string name="grid_type">Grid type</string>
    <string name="grid_annualized_yield">Annualized yield</string>
</resources>