<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_item_titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:gravity="left"
            android:text="@string/symbol"
            android:textColor="@color/tab_type_color"
            android:textSize="@dimen/sp_12" />


        <TextView
            android:id="@+id/tv_new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="0.11"
            android:text="@string/market_edit_like_type_top"
            android:textColor="@color/tab_type_color"
            android:textSize="@dimen/sp_12" />


        <TextView
            android:id="@+id/tv_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.11"
            android:gravity="center|right"
            android:text="@string/market_edit_like_type_drag"
            android:textColor="@color/tab_type_color"
            android:textSize="@dimen/sp_12" />


    </LinearLayout>
</LinearLayout>