<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_card_color"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ly_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_105"
        android:background="@color/bg_card_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="end"
            app:expandedTitleMarginBottom="@dimen/dp_15"
            app:expandedTitleMarginStart="@dimen/dp_15"
            app:expandedTitleTextAppearance="@dimen/sp_28"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:subtitleTextAppearance="@dimen/sp_14"
            app:title="@string/leverage_borrow"
            app:titleEnabled="true"
            app:titleTextColor="@color/text_color">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/return_daytime"
                app:titleTextColor="@color/text_color" />

            <TextView
                android:id="@+id/tv_recharge_record"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:layout_gravity="right"
                android:gravity="center_vertical"
                android:paddingRight="@dimen/dp_15"
                android:text="@string/leverage_borrowRecord"
                android:textColor="@color/normal_text_color"
                android:textSize="@dimen/sp_14"
                app:layout_collapseMode="pin" />
            <!--app:popupTheme="@style/ToolbarTheme"-->

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_lever_account_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:background="@drawable/bg_asset_coin_type"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15">

                <TextView
                    android:id="@+id/tv_lever_account_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="13dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/sp_14"
                    android:textStyle="bold"
                    tools:text="BTC/USDT 杠杆账户" />

                <ImageView
                    android:layout_width="9dp"
                    android:layout_height="9dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_next" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ll_lever_type_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.flyco.tablayout.CommonTabLayout
                    android:id="@+id/stl_market_loop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_42"
                    app:tl_indicator_color="@color/main_blue"
                    app:tl_indicator_corner_radius="@dimen/dp_4"
                    app:tl_indicator_height="@dimen/dp_3"
                    app:tl_indicator_width="@dimen/dp_20"
                    app:tl_indicator_width_equal_title="false"
                    app:tl_tab_space_equal="true"
                    app:tl_textBold="BOTH"
                    app:tl_textSelectColor="@color/tab_select_text_color"
                    app:tl_textUnSelectColor="@color/tab_nor_text_color"
                    app:tl_textSize="@dimen/sp_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_half"
                    android:background="@color/new_line" />
            </LinearLayout>




            <com.yjkj.chainup.new_version.view.BorrowingAndReturnView
                android:id="@+id/bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:edittext_coin="BTC"
                app:edittext_hint="@string/withdraw_text_minimumVolume"
                app:endText_content="@string/withdraw_text_available"
                app:first_title="@string/leverage_asset"
                app:first_content=""
                app:fourth_content=""
                app:fourth_title="@string/leverage_rate"
                app:second_content=""
                app:second_title="@string/leverage_have_borrowed"
                app:third_content=""
                app:third_title="@string/leverage_text_biggestLimit" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <com.yjkj.chainup.new_version.view.CommonlyUsedButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_30"
        app:bottonTextContent="@string/leverage_borrow" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>